sql/test/unit/checks/end_processing_after_fail.exp
1
select 1;
^
|
 ----- ERROR
Error: line 1, character 0:
Constraint failed
